--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,4 +8,11 @@
         <!-- Customize your theme here. -->
 
     </style>
+    <style name="Theme.FeedbackSystem.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="Theme.FeedbackSystem.AppBarOverlay"
+        parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.FeedbackSystem.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
